# AttendanceTracker

./: .replit  .vercelignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: style.css
attached_assets/: 10Static nuevo formato.xlsx  12Static.xlsx  Pasted--Los-d-as-con-exceso-de-almuerzo-funcionan-pero-los-minutos-se-calculan-mal-cuando-falta-informaci-1740486737614.txt  Pasted--M-tricas-Generales-del-Mes-InvalidCharacterError-Failed-to-execute-createElement-on-Document--1741789186823.txt  Pasted--Necesito-crear-un-stat-card-llamado-Horas-trabajadas-por-semana-para-los-empleados-que-tengan--1741609796159.txt  Pasted-1era-hoja-Resumen-de-asistencias-summary-A-Numero-identificador-B-Nombre-persona-C-Dep-1740052235885.txt  Pasted-Calcular-los-d-as-sin-registro-de-almuerzo-de-cada-persona-Para-calcular-los-d-as-utiliza-las-h-1740402163359.txt  Pasted-Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can-no-1740490224349.txt  Pasted-En-la-hoja-summary-Fila-5-23-Columna-A-Numero-id-Fila-5-23-Columna-B-Nombre-Fi-1740398873944.txt  Pasted-Estructura-de-los-datos-en-el-archivo-de-Excel-El-archivo-de-Excel-contiene-m-ltiples-hojas-A-parti-1740397708699.txt  Pasted-Leyendo-hoja-Summary-Datos-procesados-de-empleados-0-1-2-3--1740570365668.txt  Pasted-Leyendo-hoja-Summary-Datos-procesados-de-empleados-0-1-2-required-1740574632162.txt  Pasted-Leyendo-hoja-Summary-Datos-procesados-de-empleados-0-1-2-required-1740574836882.txt  (+9 more)
uploads/: 01Static.XLS  02Static.XLS  prueba.xlsx
utils/: excel_processor.py  (+3 more)
